--- a/figures/language-counts.tex
+++ b/figures/language-counts.tex
@@ -4,9 +4,9 @@
     \toprule
     Language & Tweet count & Share \% \\
     \midrule
-    Latvian     & 61869  & 45.5\%  \\
-    Russian     & 46070  & 33.9\%  \\
-    English     & 28128  & 20.7\%  \\
+    Latvian     & 61\,869  & 45.5\%  \\
+    Russian     & 46\,070  & 33.9\%  \\
+    English     & 28\,128  & 20.7\%  \\
     \bottomrule
   \end{tabular}
   \caption{Language distribution in the final collection.}
