--- a/dmilajevs_publications.bib
+++ b/dmilajevs_publications.bib
@@ -85,3 +85,12 @@
   url       = {http://anthology.aclweb.org/W16-2523},
   doi = 	{10.18653/v1/W16-2523},
 }
+
+@misc{dmitrijs_milajevs_2017_546609,
+  author       = {Dmitrijs Milajevs},
+  title        = {dimazest/poultry: v1.5.0},
+  month        = {April},
+  year         = {2017},
+  doi          = {10.5281/zenodo.546609},
+  url          = {https://doi.org/10.5281/zenodo.546609}
+}
