--- a/references.bib
+++ b/references.bib
@@ -5168,3 +5168,15 @@ url="http://dx.doi.org/10.1007/978-94-017-1183-8_6"
   pages     = {230--238},
   url       = {http://www.aclweb.org/anthology/E14-1025}
 }
+
+@article {sang2013,
+	title = {Dealing with big data: The case of Twitter},
+	journal = {Computational Linguistics in the Netherlands Journal},
+	volume = {3},
+	year = {2013},
+	month = {12/2013},
+	pages = {121-134},
+	issn = {2211-4009},
+	attachments = {http://clinjournal.org/sites/clinjournal.org/files/08-TjongKimSang-vandenBosch-CLIN2013.pdf},
+	author = {Tjong Kim Sang, Erik and Antal van den Bosch}
+}
