Updates from ShareLaTeX

--- a/figures/language-use.tex
+++ b/figures/language-use.tex
@@ -6,9 +6,9 @@
     \midrule
     Monoligual     & \textbf{75} & 43 & 62  \\
     \addlinespace
-    Multi, first   & \textbf{42} & 18 & 22  \\
-    Multi, second  & \textbf{58} &  6 & 18  \\
-    Multi, third   & 5  & \textbf{55} & 22  \\
+    Multi, first   & \textbf{150} & 135 & 42  \\
+    Multi, second  & 56 &  19 & \textbf{266}  \\
+    Multi, third   & \textbf{29}  & 26 & 9  \\
     \bottomrule
   \end{tabular}
   \caption{Language choice between monolingual and multilingual users.}
