--- a/paper.tex
+++ b/paper.tex
@@ -43,7 +43,7 @@ Twitter has become a rich source for linguistic data. Here, a possibility of bui
 \section{Introduction}
 \label{sec:introduction}
 
-Comparable corpora are widely used by the natural language processing community to build machine translation or information retrieval models. The goal of this work is to investigate whether it is possible to build a comparable linguistic resource that originates from one specific location -- Riga, Latvia. Riga is a great location for this because it is a multilingual city in which Latvian and Russian are both widely used in everyday life, and English is used a lingua france in tourism and commerce. Being linked to a specific location, the resulting corpus might benefit not only the language engineers and linguists, but also social scientists.
+Comparable corpora are widely used by the natural language processing community to build machine translation or information retrieval models. The goal of this work is to investigate whether it is possible to build a comparable linguistic resource that originates from one specific location -- Riga, Latvia. Riga is a great location for this because it is a multilingual city in which Latvian and Russian are both widely used in everyday life, and English is used a lingua franca in tourism and commerce. Being linked to a specific location, the resulting corpus might benefit not only the language engineers and linguists, but also social scientists.
 
 Twitter,\footnote{\url{https://twitter.com}} a microblog platform, is used as the data source in this pilot study. Over the period of 5 months (November 2016 to March 2017), tweets from Riga were collected, filtered and analysed. The main goal of the analysis is to investigate whether a creation of a comparable tweet corpus is feasible and what the corpus construction strategy should be.
 
@@ -137,13 +137,15 @@ where $n_\mathit{lv}$ corresponds to the number of tweets in Latvian for a given
 %The higher the score, the more dominant one language.
 The lowest possible value of 0.33 means that all three languages are used equally. The value of 0.5 means that 50\% of tweets are written in a dominant language. The value of 1 means that the user tweets exclusively in one language.
 
-The histogram on Figure~\ref{fig:score-hist} shows the score distribution. 425 (83.8\%) users tweet mostly in one language (their scores are greater than 0.897). For 78  (15.4\%) users the score is between 0.5 and 0.897. There are only four (0.8\%) users whose dominant language share is less than 50\%.
+The histogram on Figure~\ref{fig:score-hist} shows the score distribution. 420 (82.8\%) users tweet mostly in one language (their scores are greater than 0.9). For 83  (16.4\%) users the score is between 0.5 and 0.9. There are only four (0.8\%) users whose dominant language share is less than 50\%.
 
 Among the four Twitter users whose score is less than 0.5---meaning that they use all three languages extensively---three are personal accounts and one is a company account.
 
 Another interesting accounts that tweet equally in Latvian and Russian, but do not tweet in English are the accounts of a library and a football club. It worth noting that mixing languages is not common in Latvian Internet. For example, large media portals tend to have separate Latvian and Russian web-sites and separate Twitter handles.
 
-To illustrate the language usage pattern between multilingual users, their first most frequently used language, their second most frequently used language and their third most frequently language were identified. Latvian is not only the most used language among the monoligual users but also is the first and second most common choice between the multilingual users. Russian is the most frequent third choice, as Table~\ref{tab:language-use} shows.
+To illustrate the language usage pattern between multilingual users, their first most frequently used language, their second most frequently used language and their third most frequently language were identified. If user tweeted equally in two (three) languages, then the two (three) languages were given the maximal preference. A user who tweeted equally in Latvian and Russian, but less in English, will counted as Latvian and Russian being the first perference, English as the third.
+
+Latvian is not only the most used language among the monoligual users, but also is the first and third most common choice between the multilingual users. The preference for Russian is similar to Latvian, despite the numbers being slightly lower, suggesting its significant role in everyday life. English is almost the ultimate second choice, proving its role as lingua franca, as Table~\ref{tab:language-use} shows.
 
 \input{figures/language-use.tex}
 
