--- a/references.bib
+++ b/references.bib
@@ -5170,7 +5170,7 @@ url="http://dx.doi.org/10.1007/978-94-017-1183-8_6"
 }
 
 @article {sang2013,
-	title = {Dealing with big data: The case of Twitter},
+	title = {{Dealing with big data: The case of Twitter}},
 	journal = {Computational Linguistics in the Netherlands Journal},
 	volume = {3},
 	year = {2013},
@@ -5179,4 +5179,66 @@ url="http://dx.doi.org/10.1007/978-94-017-1183-8_6"
 	issn = {2211-4009},
 	attachments = {http://clinjournal.org/sites/clinjournal.org/files/08-TjongKimSang-vandenBosch-CLIN2013.pdf},
 	author = {Tjong Kim Sang, Erik and Antal van den Bosch}
+}
+
+@InProceedings{SANVICENTE16.465,
+  author = {I{\~{n}}aki San Vicente and I{\~{n}}aki Alegr{\'{i}}a and Cristina Espa{{\~n}}a-Bonet and Pablo Gamallo and Hugo Gon{\c{c}}alo Oliveira and Eva Mart{\'{i}}nez Garcia and Antonio Toral and Arkaitz Zubiaga and Nora Aranberri},
+  title = {{TweetMT: A Parallel Microblog Corpus}},
+  booktitle = {Proceedings of the Tenth International Conference on Language Resources and Evaluation (LREC 2016)},
+  year = {2016},
+  month = {may},
+  date = {23-28},
+  location = {Portorož, Slovenia},
+  editor = {Nicoletta Calzolari (Conference Chair) and Khalid Choukri and Thierry Declerck and Sara Goggi and Marko Grobelnik and Bente Maegaard and Joseph Mariani and Helene Mazo and Asuncion Moreno and Jan Odijk and Stelios Piperidis},
+  publisher = {European Language Resources Association (ELRA)},
+  address = {Paris, France},
+  isbn = {978-2-9517408-9-1},
+  language = {english}
+ }
+ 
+ @InProceedings{gotti-langlais-farzindar:2013:LASM,
+  author    = {Gotti, Fabrizio  and  Langlais, Philippe  and  Farzindar, Atefeh},
+  title     = {{Translating Government Agencies' Tweet Feeds: Specificities, Problems and (a few) Solutions}},
+  booktitle = {Proceedings of the Workshop on Language Analysis in Social Media},
+  month     = {June},
+  year      = {2013},
+  address   = {Atlanta, Georgia},
+  publisher = {Association for Computational Linguistics},
+  pages     = {80--89},
+  url       = {http://www.aclweb.org/anthology/W13-1109}
+}
+
+@InProceedings{ling-EtAl:2013:ACL2013,
+  author    = {Ling, Wang  and  Xiang, Guang  and  Dyer, Chris  and  Black, Alan  and  Trancoso, Isabel},
+  title     = {{Microblogs as Parallel Corpora}},
+  booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  month     = {August},
+  year      = {2013},
+  address   = {Sofia, Bulgaria},
+  publisher = {Association for Computational Linguistics},
+  pages     = {176--186},
+  url       = {http://www.aclweb.org/anthology/P13-1018}
+}
+
+@article{Peisenieks2014,
+  title = {{Uses of Machine Translation in the Sentiment Analysis of Tweets}},
+  volume = {268},
+  ISSN = {0922-6389},
+  url = {http://doi.org/10.3233/978-1-61499-442-8-126},
+  DOI = {10.3233/978-1-61499-442-8-126},
+  number = {Human Language Technologies-The Baltic Perspective},
+  journal = {Frontiers in Artificial Intelligence and Applications},
+  publisher = {IOS Press},
+  author = {J{\={a}}nis Peisenieks and Raivis Skadi{\c{n}}{\v{s}}},
+  year = {2014},
+  pages = {126–131}
+}
+
+@article{vspats2016opinion,
+  title={Opinion Mining in Latvian Text Using Semantic Polarity Analysis and Machine Learning Approach},
+  author={{\v{S}}pats, Gatis and Birzniece, Ilze},
+  journal={Complex Systems Informatics and Modeling Quarterly},
+  number={7},
+  pages={51--59},
+  year={2016}
 }
